--- a/Main.tex
+++ b/Main.tex
@@ -21,8 +21,8 @@
 \supervisormail{huhui@iastate.edu}
 
 % Report Title & Subtitle
-\title{Smoke Flow Visualization Pre-Laboratory}
-\subtitle{AER E 344 - Pre-Lab 01 - Smoke Flow Visualization}
+\title{Wind Tunnel Calibration Pre-Laboratory}
+\subtitle{AER E 344 - Pre-Lab 02 - Wind Tunnel Calibration}
 
 % Filiations
 \university{Iowa State University}
@@ -72,7 +72,7 @@
 \include{Chapters/01-Answers}
 
 % Bibliography
-% \printbibliography
+\printbibliography
 
 % Appendices
 % \appendix
